@@ -23,3 +23,4 @@
  * Gerlad Storer - https://github.com/gstorer
  * Simon Mutch - https://github.com/smutch
  * Michael Milton - https://github.com/tmiguelt
+ * Mike Pagel - https://github.com/moltob
