@@ -148,6 +148,15 @@ If you are executing the default tasks this flag is automatically set.
 
 If you want check which tasks the clean operation would affect you can use the option *-n*/*--dry-run*.
 
+If you like to also make doit forget previous execution of cleaned tasks, use option
+*--forget*. This can be made the default behavior by adding the corresponding ``cleanforget``
+configuration switch:
+
+.. code-block:: python
+
+    DOIT_CONFIG = {
+        'cleanforget': True,
+    }
 
 
 ignore
